# zep-rewrite

./: pyproject.toml
src/client/: client.py  types.py
src/server/api/: main.py
src/server/database/: config.py  init_db.py  models.py
