[tool.poetry]
name = "zep-rewrite"
version = "0.1.0"
authors = ["Christie <ceoptimize@gmail.com>"]
description = "Long-term memory service for AI assistants"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
httpx = ">=0.21.2"
pydantic = ">=1.9.2"
fastapi = "^0.68.0"
sqlalchemy = "^1.4.0"
asyncpg = "^0.27.0"
alembic = "^1.7.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
black = "^24.4.2"
ruff = "^0.4.8"